@@ -1,16 +1,15 @@
 require File.dirname(__FILE__) + '/../../test_helper'
 
 class RemoteCyberSourceTest < Test::Unit::TestCase
-  # Amount in cents
-  AMOUNT = 100
-
   def setup
     Base.gateway_mode = :test
 
     @gateway = CyberSourceGateway.new(fixtures(:cyber_source))
 
-    @creditcard = credit_card('4111111111111111', :type => 'visa')
+    @credit_card = credit_card('4111111111111111', :type => 'visa')
     @declined_card = credit_card('801111111111111', :type => 'visa')
+    
+    @amount = 100
     
     @options = {
       :address => { 
@@ -49,7 +48,7 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
   end
   
   def test_successful_authorization
-    assert response = @gateway.authorize(AMOUNT, @creditcard, @options)
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
     assert_equal 'Successful transaction', response.message
     assert_success response
     assert response.test?
@@ -57,14 +56,14 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
   end
 
   def test_unsuccessful_authorization
-    assert response = @gateway.authorize(AMOUNT, @declined_card, @options)
+    assert response = @gateway.authorize(@amount, @declined_card, @options)
     assert response.test?
     assert_equal 'Invalid account number', response.message
     assert_equal false,  response.success?
   end
 
   def test_successful_tax_calculation
-    assert response = @gateway.calculate_tax(@creditcard, @options)
+    assert response = @gateway.calculate_tax(@credit_card, @options)
     assert_equal 'Successful transaction', response.message
     assert response.params['totalTaxAmount']
     assert_not_equal "0", response.params['totalTaxAmount']
@@ -74,7 +73,7 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
 
   def test_successful_tax_calculation_with_nexus
     @gateway.options = @gateway.options.merge(:nexus => 'WI')
-    assert response = @gateway.calculate_tax(@creditcard, @options)
+    assert response = @gateway.calculate_tax(@credit_card, @options)
     assert_equal 'Successful transaction', response.message
     assert response.params['totalTaxAmount']
     assert_equal "0", response.params['totalTaxAmount']
@@ -83,48 +82,47 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
   end
 
   def test_successful_purchase
-    assert response = @gateway.purchase(AMOUNT, @creditcard, @options)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_equal 'Successful transaction', response.message
     assert_success response
     assert response.test?
   end
 
   def test_unsuccessful_purchase
-    assert response = @gateway.purchase(AMOUNT, @declined_card, @options)
+    assert response = @gateway.purchase(@amount, @declined_card, @options)
     assert_equal 'Invalid account number', response.message
     assert_failure response
     assert response.test?
   end
 
   def test_authorize_and_capture
-    assert auth = @gateway.authorize(AMOUNT, @creditcard, @options)
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
     assert_success auth
     assert_equal 'Successful transaction', auth.message
   
-    assert capture = @gateway.capture(AMOUNT, auth.authorization)
+    assert capture = @gateway.capture(@amount, auth.authorization)
     assert_success capture
   end
   
-  def test_good_authorize_and_bad_capture
-    assert auth = @gateway.authorize(AMOUNT, @creditcard, @options)
+  def test_successful_authorization_and_failed_capture
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
     assert_success auth
     assert_equal 'Successful transaction', auth.message
 
-    assert capture = @gateway.capture(AMOUNT + 10, auth.authorization, @options)
+    assert capture = @gateway.capture(@amount + 10, auth.authorization, @options)
     assert_failure capture
-    assert_equal "One or more fields contains invalid data",  capture.message
   end
 
   def test_failed_capture_bad_auth_info
-    assert auth = @gateway.authorize(AMOUNT, @creditcard, @options)
-    assert capture = @gateway.capture(AMOUNT, "a;b;c", @options)
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
+    assert capture = @gateway.capture(@amount, "a;b;c", @options)
     assert_failure capture
   end
 
   def test_invalid_login
     gateway = CyberSourceGateway.new( :login => '', :password => '' )
-    assert response = gateway.purchase(AMOUNT, @creditcard, @options)
-    assert_equal "wsse:InvalidSecurity: \nSecurity Data : illegal null input\n", response.message
+    assert response = gateway.purchase(@amount, @credit_card, @options)
+    assert_match /wsse:InvalidSecurity/, response.message
     assert_failure response
   end
 end
